[LAYOUT] gestion image + description en html des propositions

--- a/templates/public/category_show.html.twig
+++ b/templates/public/category_show.html.twig
@@ -87,7 +87,7 @@
                     <div class="proposition-card">
                         <div class="card">
                             {% if data.proposition.image %}
-                                <img src="{{ data.proposition.image }}"
+                                <img src="{{ asset(data.proposition.imageForAsset) }}"
                                      alt="{{ data.proposition.title }}"
                                      class="card-img-top proposition-image">
                             {% endif %}
