--- a/templates/public/proposition_show.html.twig
+++ b/templates/public/proposition_show.html.twig
@@ -39,7 +39,11 @@
                     </div>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fas fa-lightbulb fa-8x opacity-50"></i>
+                    {% if proposition.image %}
+                        <img src="{{ asset(proposition.imageForAsset) }}" alt="{{ proposition.title }}" class="img-fluid rounded">
+                    {% else %}
+                        <i class="fas fa-lightbulb fa-8x opacity-50"></i>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -55,7 +59,7 @@
                             <i class="fas fa-info-circle text-primary me-2"></i>
                             Description de la proposition
                         </h4>
-                        <p class="mb-0 fs-5 lh-lg text-muted">{{ proposition.description|nl2br }}</p>
+                        <p class="mb-0 fs-5 lh-lg text-muted">{{ proposition.description|raw }}</p>
                     </div>
                 </div>
             </div>
