--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -25,7 +25,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-4 text-center mt-5 mt-lg-0">
                     <img src="{{ asset('images/couverture-plaidoyer.png') }}" alt="" height="350">
 {#                    <i class="fas fa-handshake fa-10x opacity-75"></i>#}
                 </div>
