ajout page maison des livreurs et du collectif

--- a/templates/page/collectif.html.twig
+++ b/templates/page/collectif.html.twig
@@ -1,6 +1,58 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Plaidoyer Vélo Bordeaux - Accueil{% endblock %}
+{% block title %}Plaidoyer Vélo Bordeaux - Le Collectif{% endblock %}
 
 {% block body %}
+    <section class="hero-section">
+        <div class="container">
+            <nav aria-label="breadcrumb" class="mb-3">
+                <ol class="breadcrumb breadcrumb-custom">
+                    <li class="breadcrumb-item">
+                        <a href="{{ path('app_home') }}" class="text-white-50">
+                            <i class="fas fa-home me-1"></i>Accueil
+                        </a>
+                    </li>
+                    <li class="breadcrumb-item">
+                        Le Collectif
+                    </li>
+                </ol>
+            </nav>
+
+            <div class="row align-items-center">
+                <div class="col-lg-8">
+                    <h1 class="display-4 fw-bold mb-3">Le Collectif</h1>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fas fa-people-group fa-8x opacity-50"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 mt-5">
+                    <h2>
+                        Un plaidoyer imaginé et porté par :
+                    </h2>
+                    <div class="d-flex flex-wrap gap-4 justify-content-center  align-items-center mb-2">
+                        <div><a href="" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/cycles&manivelles.png') }}" alt="Cycles & Manivelles"></a></div>
+                        <div><a href="" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/MAISON-DES-LIVREURS-1-300x158.png') }}" alt="La Maison des Livreurs"></a></div>
+                        <div><a href="" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/VELOTAFFEURS_TRESSOIS_LOGO.png') }}" alt="Les Vélotaffeurs Tressois"></a></div>
+                        <div><a href="" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/VELO-CITE.png') }}" alt="Vélo-Cité"></a></div>
+                    </div>
+                    <h2 class="mt-5">Un plaidoyer relu, validé et/ou soutenu par :</h2>
+                    <div class="d-flex flex-wrap gap-4 justify-content-center align-items-center mb-2">
+                        <div><a href="" target="_blank"><img  height="75px" width="auto" src="{{ asset('images/eturecup.png') }}" alt="Etu'Recup"></a></div>
+                        <div><a href="" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/recyclerie-sportive.png') }}" alt="La Recyclerie Sportive"></a></div>
+                        <div><a href="" target="_blank"><img  height="50px" width="auto" src="{{ asset('images/le_garage_moderne.png') }}" alt="Le Garage Moderne"></a></div>
+                        <div><a href="" target="_blank"><img  height="125px" width="auto" src="{{ asset('images/leon-a-velo.jpg') }}" alt="Léon à Vélo"></a></div>
+                    </div>
+                    <h2>Soutiens :</h2>
+                    <img src="{{ asset('images/soutien.png') }}" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
