--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -26,7 +26,9 @@
                     </div>
                 </div>
                 <div class="col-lg-4 text-center mt-5 mt-lg-0">
-                    <img src="{{ asset('images/couverture-plaidoyer.png') }}" alt="" height="350">
+                    <a href="{{ asset('images/Plaidoyer_Vélo_Municipales_2026.pdf') }}" target="_blank">
+                        <img src="{{ asset('images/couverture-plaidoyer.png') }}" alt="" height="350">
+                    </a>
 {#                    <i class="fas fa-handshake fa-10x opacity-75"></i>#}
                 </div>
             </div>
