ajout lien des assos

--- a/templates/page/collectif.html.twig
+++ b/templates/page/collectif.html.twig
@@ -37,17 +37,17 @@
                         Un plaidoyer imaginé et porté par :
                     </h2>
                     <div class="d-flex flex-wrap gap-4 justify-content-center  align-items-center mb-2">
-                        <div><a href="" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/cycles&manivelles.png') }}" alt="Cycles & Manivelles"></a></div>
-                        <div><a href="" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/MAISON-DES-LIVREURS-1-300x158.png') }}" alt="La Maison des Livreurs"></a></div>
-                        <div><a href="" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/VELOTAFFEURS_TRESSOIS_LOGO.png') }}" alt="Les Vélotaffeurs Tressois"></a></div>
-                        <div><a href="" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/VELO-CITE.png') }}" alt="Vélo-Cité"></a></div>
+                        <div><a href="https://www.cycles-manivelles.org" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/cycles&manivelles.png') }}" alt="Cycles & Manivelles"></a></div>
+                        <div><a href="https://www.linkedin.com/showcase/maisons-des-livreurs/?originalSubdomain=fr" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/MAISON-DES-LIVREURS-1-300x158.png') }}" alt="La Maison des Livreurs"></a></div>
+                        <div><a href="https://velotaffeurs-tressois.fr" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/VELOTAFFEURS_TRESSOIS_LOGO.png') }}" alt="Les Vélotaffeurs Tressois"></a></div>
+                        <div><a href="https://velo-cite.org" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/VELO-CITE.png') }}" alt="Vélo-Cité"></a></div>
                     </div>
                     <h2 class="mt-5">Un plaidoyer relu, validé et/ou soutenu par :</h2>
                     <div class="d-flex flex-wrap gap-4 justify-content-center align-items-center mb-2">
-                        <div><a href="" target="_blank"><img  height="75px" width="auto" src="{{ asset('images/eturecup.png') }}" alt="Etu'Recup"></a></div>
-                        <div><a href="" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/recyclerie-sportive.png') }}" alt="La Recyclerie Sportive"></a></div>
-                        <div><a href="" target="_blank"><img  height="50px" width="auto" src="{{ asset('images/le_garage_moderne.png') }}" alt="Le Garage Moderne"></a></div>
-                        <div><a href="" target="_blank"><img  height="125px" width="auto" src="{{ asset('images/leon-a-velo.jpg') }}" alt="Léon à Vélo"></a></div>
+                        <div><a href="https://eturecup.org" target="_blank"><img  height="75px" width="auto" src="{{ asset('images/eturecup.png') }}" alt="Etu'Recup"></a></div>
+                        <div><a href="https://recyclerie-sportive.org" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/recyclerie-sportive.png') }}" alt="La Recyclerie Sportive"></a></div>
+                        <div><a href="https://legaragemoderne.org" target="_blank"><img  height="50px" width="auto" src="{{ asset('images/le_garage_moderne.png') }}" alt="Le Garage Moderne"></a></div>
+                        <div><a href="https://www.leonavelo.org" target="_blank"><img  height="125px" width="auto" src="{{ asset('images/leon-a-velo.jpg') }}" alt="Léon à Vélo"></a></div>
                     </div>
                     <h2>Soutiens :</h2>
                     <img src="{{ asset('images/soutien.png') }}" alt="">
