--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -17,7 +17,7 @@
     --color-green: #28a745;
     --color-green-light: #20c997;
     --color-green-dark: #1e7e34;
-    --color-red: #dc3545;
+    --color-red: #f3b2b8;
     --color-red-dark: #c82333;
     --color-red-darker: #bd2130;
     --color-orange: #fd7e14;
@@ -748,7 +748,8 @@ section#categories {
     background-color: rgba(40, 167, 69, 0.05);
 }
 
-.proposition-refused {
+.proposition-refused,
+.list-item-refused {
     border-left: 4px solid var(--color-red);
     background-color: rgba(220, 53, 69, 0.05);
 }
@@ -859,11 +860,6 @@ section#categories {
     background-color: rgba(40, 167, 69, 0.05);
 }
 
-.list-item-refused {
-    border-left: 4px solid #dc3545;
-    background-color: rgba(220, 53, 69, 0.05);
-}
-
 .list-item {
     background: #f8f9fa;
     border-radius: 10px;
@@ -881,9 +877,4 @@ section#categories {
 .list-item-accepted {
     background-color: rgba(40, 167, 69, 0.1);
     border-left-color: #1e7e34;
-}
-
-.list-item-refused {
-    background-color: rgba(220, 53, 69, 0.1);
-    border-left-color: #bd2130;
 }
