--- a/templates/public/city_show.html.twig
+++ b/templates/public/city_show.html.twig
@@ -147,7 +147,7 @@
                                                            class="candidate-tag{% if signedListInfo.commitment.commentCandidateList %} candidate-tag-with-comment{% endif %}{% if commitmentStatus %} candidate-tag-{{ commitmentStatus.value }}{% endif %}"
                                                            title="Voir le profil de {{ signedListInfo.candidateList.nameList }}{% if commitmentStatus %} - {{ commitmentStatus.label }}{% endif %}">
                                                             {% if commitmentStatus %}
-                                                                {% if commitmentStatus.value == 'accepted' %}✅{% elseif commitmentStatus.value == 'refused' %}❌{% endif %}
+                                                                {% if commitmentStatus.value == 'accepted' %}✅{% endif %}
                                                             {% endif %}{{ signedListInfo.candidateList.nameList }}
                                                             {% if signedListInfo.commitment.commentCandidateList %}
                                                                 <i class="fas fa-info-circle comment-icon"></i>
