--- a/templates/page/collectif.html.twig
+++ b/templates/page/collectif.html.twig
@@ -42,6 +42,9 @@
                         <div><a href="https://velotaffeurs-tressois.fr" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/VELOTAFFEURS_TRESSOIS_LOGO.png') }}" alt="Les Vélotaffeurs Tressois"></a></div>
                         <div><a href="https://velo-cite.org" target="_blank"><img  height="100px" width="auto" src="{{ asset('images/VELO-CITE.png') }}" alt="Vélo-Cité"></a></div>
                     </div>
+                    <p>
+                        <a class="btn btn-primary" href="{{ path('app_contact') }}">Nous contacter</a>
+                    </p>
                     <h2 class="mt-5">Un plaidoyer relu, validé et/ou soutenu par :</h2>
                     <div class="d-flex flex-wrap gap-4 justify-content-center align-items-center mb-2">
                         <div><a href="https://eturecup.org" target="_blank"><img  height="75px" width="auto" src="{{ asset('images/eturecup.png') }}" alt="Etu'Recup"></a></div>
