--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="row g-4">
-                <div class="col-md-4 offset-md-2">
+                <div class="col-md-4">
                     <div class="card border-0 h-100">
                         <div class="card-body text-center">
                             <i class="fas fa-search fa-3x text-primary mb-3"></i>
@@ -182,6 +182,20 @@
                             </p>
                             <a href="#" class="btn btn-info">
                                 Télécharger
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card border-0 h-100">
+                        <div class="card-body text-center">
+                            <i class="fas fa-envelope fa-3x text-primary mb-3"></i>
+                            <h5 class="card-title">Contact</h5>
+                            <p class="card-text text-muted">
+                                Vous êtes candidat·es ?<br>Contactez-nous !
+                            </p>
+                            <a href="{{ path('app_contact') }}" class="btn btn-primary">
+                                Contact
                             </a>
                         </div>
                     </div>
