--- a/templates/public/city_show.html.twig
+++ b/templates/public/city_show.html.twig
@@ -152,7 +152,7 @@
                                                             {% if signedListInfo.commitment.commentCandidateList %}
                                                                 <i class="fas fa-info-circle comment-icon"></i>
                                                                 <div class="comment-tooltip">
-                                                                    <strong>{{ signedListInfo.candidateList.nameList }} :</strong><br>
+                                                                    <strong>{{ signedListInfo.candidateList.nameList }}&nbsp;:</strong><br>
                                                                     {{ signedListInfo.commitment.commentCandidateList }}
                                                                 </div>
                                                             {% endif %}
