--- a/templates/public/proposition_show.html.twig
+++ b/templates/public/proposition_show.html.twig
@@ -185,7 +185,7 @@
                                                             <div class="mt-2">
                                                                 <small class="text-muted">
                                                                     <i class="fas fa-quote-left me-1"></i>
-                                                                    {{ listData.commitment.commentCandidateList|slice(0, 100) }}{% if listData.commitment.commentCandidateList|length > 100 %}...{% endif %}
+                                                                    {{ listData.commitment.commentCandidateList }}
                                                                 </small>
                                                             </div>
                                                         {% endif %}
