layout: block refus : texte en noir pour un meilleur contraste

--- a/var/sass/app.output.css
+++ b/var/sass/app.output.css
@@ -12456,7 +12456,7 @@ section#categories {
 
 .candidate-tag-refused {
   background: var(--color-red);
-  color: var(--color-white);
+  color: var(--color-black);
 }
 
 .candidate-tag-with-comment {
