layout: personnalisation de la balise meta description pour les différentes pages

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Plaidoyer Vélo Bordeaux{% endblock %}</title>
-        <meta name="description" content="Suivi des engagements de plaidoyer des listes candidates dans les communes de Bordeaux Métropole">
+        <meta name="description" content="{% block descriptionmeta %}Suivi des engagements de plaidoyer des listes candidates dans les communes de Bordeaux Métropole{% endblock %}">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>🤝</text></svg>">
 
         <link rel="stylesheet" href="{{ asset('styles/app.scss') }}">
